--- a/res/values/nitrogen_arrays.xml
+++ b/res/values/nitrogen_arrays.xml
@@ -393,6 +393,19 @@
         <item>2</item>
     </string-array>
 
+    <!-- Battery Percent -->
+    <string-array name="battery_percent_entries" translatable="false">
+        <item>@string/battery_percent_none</item>
+        <item>@string/battery_percent_outside</item>
+        <item>@string/battery_percent_inside</item>
+    </string-array>
+
+    <string-array name="battery_percent_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
     <!-- Listview animation -->
     <string-array name="listview_animation_entries">
         <item>@string/listview_off</item>
