--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -610,7 +610,6 @@
 
     <!-- Battery Styles -->
     <string name="battery_style_title">Battery icon style</string>
-    <string name="battery_style_summary">Change the look of the icon in the statusbar</string>
     <string name="battery_style_port">Portrait</string>
     <string name="battery_style_land">Landscape</string>
     <string name="battery_style_circle">Circle</string>
@@ -620,7 +619,6 @@
     <string name="battery_style_text">Text</string>
     <string name="battery_style_hidden">Hidden</string>
     <string name="show_battery_percent_title">Show battery percentage</string>
-    <string name="show_battery_percent_summary">Show battery level percentage near the icon</string>
     <string name="battery_style_category_title">Battery icon</string>
 
     <string name="recents_icon_pack_title">Icon Pack</string>
@@ -901,4 +899,7 @@
 
     <string name="data_disabled_icon_title">Show data disabled icon</string>
     <string name="data_disabled_icon_summary">Display the cross next to statusbar when data is disabled</string>
+    <string name="battery_percent_none">Don\'t show</string>
+    <string name="battery_percent_outside">Show near icon</string>
+    <string name="battery_percent_inside">Show inside icon</string>
 </resources>
