--- a/res/values/nitrogen_strings.xml
+++ b/res/values/nitrogen_strings.xml
@@ -880,5 +880,10 @@
     <string name="screen_state_on_delay_title">Screen On actions delay</string>
     <string name="screen_state_on_delay_summary">Number of minutes to wait before performing actions after screen on</string>
 
-</resources>
+    <!-- Ambient Play -->
+    <string name="ambient_play_settings_title">Ambient Play</string>
+    <string name="ambient_play_lockscreen_title">Show on lock screen</string>
+    <string name="ambient_play_illustration_text">Song by Artist</string>
+    <string name="ambient_play_description">When music is playing nearby, you can see the song name and artist. Ambient Play requires a network connection and only sends temporary recorded data to the recognition database.</string>
 
+</resources>
