--- a/res/xml/nitrogen_settings_lockscreen.xml
+++ b/res/xml/nitrogen_settings_lockscreen.xml
@@ -25,6 +25,11 @@
                 android:targetClass="com.android.systemui.tuner.LockscreenActivity" />
     </Preference>
 
+    <Preference
+        android:key="ambient_play"
+        android:title="@string/ambient_play_settings_title"
+        android:fragment="com.nitrogen.settings.fragments.AmbientPlaySettings" />
+
     <com.nitrogen.settings.preferences.SystemSettingSwitchPreference
         android:key="lockscreen_media_metadata"
         android:title="@string/media_art_title"
