--- a/res/values/nitrogen_arrays.xml
+++ b/res/values/nitrogen_arrays.xml
@@ -574,13 +574,13 @@
         <item>1</item>
         <item>2</item>
     </string-array>
-
-    <!-- Battery bar -->
-    <string-array name="battery_bar_entries">
-        <item>@string/battery_bar_location_hide</item>
-        <item>@string/battery_bar_location_statusbar</item>
-        <item>@string/battery_bar_location_top_navbar</item>
-        <item>@string/battery_bar_location_bottom_navbar</item>
+     
+    <!-- Battery Bar -->
+    <string-array name="battery_bar_entries" translatable="false">
+        <item>@string/battery_bar_hide</item>
+        <item>@string/battery_bar_statusbar</item>
+        <item>@string/battery_bar_topnav</item>
+        <item>@string/battery_bar_bottomnav</item>
     </string-array>
     <string-array name="battery_bar_values" translatable="false">
         <item>0</item>
@@ -589,52 +589,30 @@
         <item>3</item>
     </string-array>
 
-    <string-array name="battery_bar_no_navbar_entries">
-        <item>@string/battery_bar_location_hide</item>
-        <item>@string/battery_bar_location_statusbar</item>
-    </string-array>
-    <string-array name="battery_bar_no_navbar_values" translatable="false">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-
     <string-array name="battery_bar_style_entries" translatable="false">
-        <item>@string/battery_bar_style_regular</item>
-        <item>@string/battery_bar_style_center_mirrored</item>
-        <item>@string/battery_bar_style_reversed</item>
+        <item>@string/battery_bar_reg</item>
+        <item>@string/battery_bar_center</item>
+        <item>@string/battery_bar_reversed</item>
     </string-array>
     <string-array name="battery_bar_style_values" translatable="false">
-
-    <!-- Statusbar Clock options
-    <string-array name="clock_style_entries" translatable="false">
-        <item>@string/right_clock</item>
-        <item>@string/center_clock</item>
-    </string-array>
-    <string-array name="clock_style_values" translatable="false">
-        <item>0</item>
-        <item>1</item>
-    </string-array>
-    <string-array name="entries_status_bar_am_pm">
-        <item>@string/am_pm_clock_none</item>
-        <item>@string/am_pm_clock_small</item>
-        <item>@string/am_pm_clock_normal</item>
-    </string-array>
-    <string-array name="values_status_bar_am_pm" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
     </string-array>
-    <string-array name="clock_date_display_entries">
-        <item>@string/clock_date_display_none</item>
-        <item>@string/clock_date_display_small</item>
-        <item>@string/clock_date_display_normal</item>
+
+    <string-array name="battery_bar_thickness_entries" translatable="false">
+        <item>1 dp</item>
+        <item>2 dp</item>
+        <item>3 dp</item>
+        <item>4 dp</item>
     </string-array>
-    <string-array name="clock_date_display_values" translatable="false">
-        <item>0</item>
+    <string-array name="battery_bar_thickness_values" translatable="false">
         <item>1</item>
         <item>2</item>
-    </string-array-->
-
+        <item>3</item>
+        <item>4</item>
+    </string-array>
+         
     <!-- StatusBar weather settings -->
     <string-array name="status_bar_weather_entries" translatable="false">
         <item>@string/status_bar_weather_hidden</item>
@@ -653,38 +631,6 @@
         <item>4</item>
         <item>5</item>
     </string-array>
-
-    <!--string-array name="clock_date_style_entries">
-        <item>@string/clock_date_style_normal</item>
-        <item>@string/clock_date_style_lowercase</item>
-        <item>@string/clock_date_style_uppercase</item>
-    </string-array>
-    <string-array name="clock_date_style_values" translatable="false">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
-    </string-array>
-    <string-array name="clock_date_format_entries_values">
-        <item>dd/MM/yy</item>
-        <item>MM/dd/yy</item>
-        <item>yyyy-MM-dd</item>
-        <item>yyyy-dd-MM</item>
-        <item>dd-MM-yyyy</item>
-        <item>MM-dd-yyyy</item>
-        <item>MMM dd</item>
-        <item>MMM dd, yyyy</item>
-        <item>MMMM dd, yyyy</item>
-        <item>EEE</item>
-        <item>EEE dd</item>
-        <item>EEE dd/MM</item>
-        <item>EEE MM/dd</item>
-        <item>EEE dd MMM</item>
-        <item>EEE MMM dd</item>
-        <item>EEE MMMM dd</item>
-        <item>EEEE dd/MM</item>
-        <item>EEEE MM/dd</item>
-        <item>@string/clock_date_format_custom</item>
-    </string-array-->
 
     <!-- QS Headers -->
     <string-array name="custom_header_provider_entries" translatable="false">
